--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/microservices
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+#spring.jpa.defer-datasource-initialization=true
