Step_01 Created Hotel Entity

--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -3,4 +3,10 @@ server:
 
 spring:
   datasource:
-    url: 
+    url: jdbc:mysql://localhost:3306/microservices
+    username: root
+    password: 123456
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
