--- a/RatingService/src/main/resources/application.yml
+++ b/RatingService/src/main/resources/application.yml
@@ -1,1 +1,13 @@
+server:
+  port: 8083
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/microservices
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
