--- a/RatingService/src/main/resources/application.yml
+++ b/RatingService/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     url: jdbc:mysql://localhost:3306/microservices
     username: root
     password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driverx  x
   jpa:
     hibernate:
       ddl-auto: create-drop
