--- a/RatingService/src/main/resources/application.yml
+++ b/RatingService/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
     url: jdbc:mysql://localhost:3306/microservices
     username: root
     password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driverx  x
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
